--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   speech_to_text: ^6.1.1
   highlight_text: ^1.6.0
   avatar_glow: ^2.0.2
-
+  permission_handler: ^10.3.0
+  loading_animation_widget: ^1.2.0+4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
