implemented upload image for web and mobile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   firebase: ^9.0.3
   firebase_auth: ^4.6.3
   provider:
+  file_picker: ^5.3.2
   cloud_firestore: ^4.8.1
+  firebase_storage: ^11.2.3
   speech_to_text: ^6.1.1
   highlight_text: ^1.6.0
   avatar_glow: ^2.0.2
